fix youtube iframe alignment

--- a/css/main.css
+++ b/css/main.css
@@ -65,10 +65,11 @@ section {
 /* About styling */
 .about-container {
     background: #3A3A62;
+    padding: 70px 20px;
 }
 
 .about-heading {
-    margin-top: 100px;
+    /*margin-top: 90px;*/
     text-transform: uppercase;
     font-size: 1.5em;
     line-height: 1.875em;
@@ -85,15 +86,20 @@ section {
 
 .section-paragraph {
     margin: 30px 0;
-    font-size:31px
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.7);
+    /*margin-bottom: 90px;*/
 }
 
 .video-container {
     background-color: #00FFC2;
+    padding: 0;
 }
-.embed-responsive-inout {
-    padding-bottom: 64.20%;
+
+iframe{
+    padding: 0
 }
+
 /* about end */
 
 /* footer styling */
@@ -155,3 +161,5 @@ footer {
         font-size: 2em;
     }
 }
+
+
